--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,27 +2,10 @@
 	<div class="header">
 	    <h1> To Do List </h1>
 	</div>
-	<div class="form-group">
-	    <input class="task" [(ngModel)]="text" placeholder = "Task" />
-	    <input type="date" class="date-task" [(ngModel)]="date" placeholder = "YYYY-MM-DD" />
-	    <button class="add-task-btn" (click)="addItem(text,date)">Add</button>
-	</div>
+	<new-task [items]="items">	
+	</new-task>
 	<div  class="task-container">
-		<div *ngFor="let item of items" class="task-box" [class.complite]="item.done">
-		    <div class="item-checkbox ">
-		        <input type="checkbox" (click)="checkTask(item)" [(ngModel)]="item.done" />
-		    </div>
-		    <div class="item-task ">
-		        <p>{{item.task}}</p>
-		    </div>
-		    <div class="item-date">
-		        <p>{{item.date}}</p>
-		 	</div>
-		    <div class="delete-task ">
-		        <button type="button" class="delete-task-btn" (click)="removeTask(item)" aria-label="Close">
-		            &times;
-		        </button>
-		    </div>
-		</div>    
+		<task *ngFor="let item of items;" [item]="item" [items]="items" >
+		</task>
 	</div>
 </div>
