--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,7 @@ body{
 	background-color: #e8e8e8;
 }
 .main{
+    margin-top: 20px;
 	max-width: 700px;
 	display: flex;
 	flex-direction: column;
@@ -28,12 +29,9 @@ body{
 	margin: auto;
 }
 
-.task-container{
-    display: flex;
-    flex-direction: column;
-}
 
-.form-group,.load-group,.task-container{
+
+.form-group,.load-group{
     display: flex;
     margin: 20px;
     justify-content:center;
