--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="main">
 	<div class="header">
-	    <h1> To Do List </h1>
+	    <h1>{{title}}</h1>
 	</div>
-	<new-task  (onChanged)="onChanged($event)" >	
+	<new-task >	
 	</new-task>
-	<list [items]="items" >
+	<list  >
 	</list>
 </div>
